--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,37 @@
-Django>=4.2
-djangorestframework
-djoser
-drf-social-oauth2
-drf-yasg
-reportlab
-openpyxl
-Pillow
+asgiref==3.11.0
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+cryptography==46.0.3
+defusedxml==0.7.1
+Django==5.2.8
+django-oauth-toolkit==3.1.0
+django-silk==5.4.3
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+djoser==2.3.3
+drf-social-oauth2==3.1.0
+drf-yasg==1.21.11
+et_xmlfile==2.0.0
+gprof2dot==2025.4.14
+idna==3.11
+inflection==0.5.1
+jwcrypto==1.5.6
+oauthlib==3.3.1
+openpyxl==3.1.5
+packaging==25.0
+pillow==12.0.0
+pycparser==2.23
+PyJWT==2.10.1
+python3-openid==3.2.0
+pytz==2025.2
+PyYAML==6.0.3
+reportlab==4.4.5
+requests==2.32.5
+requests-oauthlib==2.0.0
+social-auth-app-django==5.6.0
+social-auth-core==4.8.1
+sqlparse==0.5.3
+typing_extensions==4.15.0
+uritemplate==4.2.0
+urllib3==2.5.0
