--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ reportlab==4.4.5
 requests==2.32.5
 requests-oauthlib==2.0.0
 rpds-py==0.29.0
+ruff==0.14.6
 social-auth-app-django==5.6.0
 social-auth-core==4.8.1
 sqlparse==0.5.3
