--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-silk==5.4.3
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 djoser==2.3.3
+dotenv==0.9.9
 drf-social-oauth2==3.1.0
 drf-spectacular==0.29.0
 drf-spectacular-sidecar==2025.10.1
@@ -29,6 +30,7 @@ packaging==25.0
 pillow==12.0.0
 pycparser==2.23
 PyJWT==2.10.1
+python-dotenv==1.2.1
 python3-openid==3.2.0
 pytz==2025.2
 PyYAML==6.0.3
