--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ packaging==25.0
 pillow==12.0.0
 pycparser==2.23
 PyJWT==2.10.1
+python-decouple==3.8
 python-dotenv==1.2.1
 python3-openid==3.2.0
 pytz==2025.2
