--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ drf-spectacular-sidecar==2025.10.1
 drf-yasg==1.21.11
 et_xmlfile==2.0.0
 gprof2dot==2025.4.14
+gunicorn==23.0.0
 idna==3.11
 inflection==0.5.1
 jsonschema==4.25.1
