--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.11.0
 attrs==25.4.0
+CacheControl==0.14.4
+cachetools==6.2.2
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
 cryptography==46.0.3
 defusedxml==0.7.1
 Django==5.2.8
+django-cors-headers==4.9.0
 django-filter==25.2
 django-oauth-toolkit==3.1.0
 django-silk==5.4.3
@@ -18,19 +21,39 @@ drf-spectacular==0.29.0
 drf-spectacular-sidecar==2025.10.1
 drf-yasg==1.21.11
 et_xmlfile==2.0.0
+firebase-admin==6.5.0
+google-api-core==2.28.1
+google-api-python-client==2.187.0
+google-auth==2.43.0
+google-auth-httplib2==0.2.1
+google-cloud-core==2.5.0
+google-cloud-firestore==2.21.0
+google-cloud-storage==3.6.0
+google-crc32c==1.7.1
+google-resumable-media==2.8.0
+googleapis-common-protos==1.72.0
 gprof2dot==2025.4.14
+grpcio==1.76.0
+grpcio-status==1.76.0
 gunicorn==23.0.0
+httplib2==0.31.0
 idna==3.11
 inflection==0.5.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 jwcrypto==1.5.6
+msgpack==1.1.2
 oauthlib==3.3.1
 openpyxl==3.1.5
 packaging==25.0
 pillow==12.0.0
+proto-plus==1.26.1
+protobuf==6.33.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.23
 PyJWT==2.10.1
+pyparsing==3.2.5
 python-decouple==3.8
 python-dotenv==1.2.1
 python3-openid==3.2.0
@@ -41,6 +64,7 @@ reportlab==4.4.5
 requests==2.32.5
 requests-oauthlib==2.0.0
 rpds-py==0.29.0
+rsa==4.9.1
 ruff==0.14.6
 social-auth-app-django==5.6.0
 social-auth-core==4.8.1
@@ -49,4 +73,3 @@ typing_extensions==4.15.0
 uritemplate==4.2.0
 urllib3==2.5.0
 whitenoise==6.11.0
-firebase-admin==6.5.0
