--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cryptography==46.0.3
 defusedxml==0.7.1
 Django==5.2.8
 django-cors-headers==4.9.0
+django-crontab==0.7.1
 django-filter==25.2
 django-oauth-toolkit==3.1.0
 django-silk==5.4.3
