--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,32 @@
+amqp==5.3.1
+arrow==1.4.0
 asgiref==3.11.0
 attrs==25.4.0
+billiard==3.6.4.0
+blessed==1.25.0
 CacheControl==0.14.4
 cachetools==6.2.2
+celery==5.2.7
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+cron_descriptor==2.0.6
 cryptography==46.0.3
 defusedxml==0.7.1
 Django==5.2.8
+django-celery-beat==2.8.1
 django-cors-headers==4.9.0
 django-crontab==0.7.1
 django-filter==25.2
 django-oauth-toolkit==3.1.0
+django-picklefield==3.4.0
 django-silk==5.4.3
+django-timezone-field==7.2.1
+django_celery_results==2.6.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 djoser==2.3.3
@@ -22,6 +36,7 @@ drf-spectacular==0.29.0
 drf-spectacular-sidecar==2025.10.1
 drf-yasg==1.21.11
 et_xmlfile==2.0.0
+exceptiongroup==1.3.1
 firebase-admin==6.5.0
 google-api-core==2.28.1
 google-api-python-client==2.187.0
@@ -43,11 +58,13 @@ inflection==0.5.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 jwcrypto==1.5.6
+kombu==5.6.1
 msgpack==1.1.2
 oauthlib==3.3.1
 openpyxl==3.1.5
 packaging==25.0
 pillow==12.0.0
+prompt_toolkit==3.0.52
 proto-plus==1.26.1
 protobuf==6.33.1
 pyasn1==0.6.1
@@ -55,11 +72,14 @@ pyasn1_modules==0.4.2
 pycparser==2.23
 PyJWT==2.10.1
 pyparsing==3.2.5
+python-crontab==3.3.0
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.2.1
 python3-openid==3.2.0
 pytz==2025.2
 PyYAML==6.0.3
+redis==4.5.4
 referencing==0.37.0
 reportlab==4.4.5
 requests==2.32.5
@@ -67,10 +87,16 @@ requests-oauthlib==2.0.0
 rpds-py==0.29.0
 rsa==4.9.1
 ruff==0.14.6
+setuptools==80.9.0
+six==1.17.0
 social-auth-app-django==5.6.0
 social-auth-core==4.8.1
 sqlparse==0.5.3
 typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
 uritemplate==4.2.0
 urllib3==2.5.0
+vine==5.1.0
+wcwidth==0.2.14
 whitenoise==6.11.0
