--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ asgiref==3.11.0
 attrs==25.4.0
 billiard==3.6.4.0
 blessed==1.25.0
+boto3==1.42.30
+botocore==1.42.30
 CacheControl==0.14.4
 cachetools==6.2.2
 celery==5.2.7
@@ -21,10 +23,12 @@ Django==5.2.8
 django-celery-beat==2.8.1
 django-cors-headers==4.9.0
 django-crontab==0.7.1
+django-decouple==2.1
 django-filter==25.2
 django-oauth-toolkit==3.1.0
 django-picklefield==3.4.0
 django-silk==5.4.3
+django-storages==1.14.6
 django-timezone-field==7.2.1
 django_celery_results==2.6.0
 djangorestframework==3.16.1
@@ -38,6 +42,7 @@ drf-yasg==1.21.11
 et_xmlfile==2.0.0
 exceptiongroup==1.3.1
 firebase-admin==6.5.0
+git-filter-repo==2.47.0
 google-api-core==2.28.1
 google-api-python-client==2.187.0
 google-auth==2.43.0
@@ -55,6 +60,7 @@ gunicorn==23.0.0
 httplib2==0.31.0
 idna==3.11
 inflection==0.5.1
+jmespath==1.0.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 jwcrypto==1.5.6
@@ -87,6 +93,7 @@ requests-oauthlib==2.0.0
 rpds-py==0.29.0
 rsa==4.9.1
 ruff==0.14.6
+s3transfer==0.16.0
 setuptools==80.9.0
 six==1.17.0
 social-auth-app-django==5.6.0
